--- a/main.css
+++ b/main.css
@@ -1,24 +1,30 @@
-.wrapperTable {
-  border-collapse: collapse;
+.wrapper {
+  display: flex;
+  border: 1px solid rgb(105, 94, 94);
 }
-td {
-  padding-right: 20px;
+.param {
+  border: 1px solid grey;
+  width: 20%;
 }
-.checkBox {
-  text-align: center;
+.label-width {
+  display: block;
 }
-select {
-  width: 100%;
+.wrapperBatton {
+  width: 40%;
 }
-.was {
+.btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 30%;
+}
+.out {
+  border: 1px solid grey;
+  width: 40%;
+}
+.out-p {
+  white-space: normal;
+  word-wrap: break-word;
+}
+#wd {
   background: red;
-  height: 100px;
-}
-.be {
-  background: blue;
-}
-p {
-  border: 1px solid red;
-  width: 500px;
-  padding: 5px;
 }
